Ajout explication execution